# routes/observation.js
@@ -1,15 +1,15 @@
 const express = require('express');
-const {
-  getObservations,
-  getSingleObservation,
-  createObservation,
-  updateObservation,
-  deleteObservation
-} = require('../controllers/observation');
+const { getObservations, getSingleObservation, createObservation, updateObservation, deleteObservation } = require('../controllers/observation');
+const { validateObservation } = require('../middleware/validation');
 const router = express.Router();
 
-router.route('/').get(getObservations).post(createObservation);
+router.route('/')
+  .get(getObservations)
+  .post(validateObservation, createObservation);
 
-router.route('/:username').get(getSingleObservation).put(updateObservation).delete(deleteObservation);
+router.route('/:username')
+  .get(getSingleObservation)
+  .put(validateObservation, updateObservation)
+  .delete(deleteObservation);
 
 module.exports = router;
