# swagger.json
@@ -51,9 +51,6 @@
                 "contact_information": {
                   "example": "any"
                 },
-                "equipment": {
-                  "example": "any"
-                },
                 "observation_log": {
                   "example": "any"
                 }
@@ -64,6 +61,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -119,9 +119,6 @@
                   "example": "any"
                 },
                 "contact_information": {
-                  "example": "any"
-                },
-                "equipment": {
                   "example": "any"
                 },
                 "observation_log": {
@@ -196,6 +193,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "username": {
+                  "example": "any"
+                },
                 "observation": {
                   "example": "any"
                 },
@@ -211,7 +211,7 @@
                 "location": {
                   "example": "any"
                 },
-                "telescope": {
+                "equipment": {
                   "example": "any"
                 },
                 "weather_conditions": {
@@ -225,9 +225,6 @@
                 },
                 "notes": {
                   "example": "any"
-                },
-                "username": {
-                  "example": "any"
                 }
               }
             }
@@ -236,6 +233,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -302,7 +302,7 @@
                 "location": {
                   "example": "any"
                 },
-                "telescope": {
+                "equipment": {
                   "example": "any"
                 },
                 "weather_conditions": {
